[tool.poetry]
name = "medicamento-custos"
version = "0.2.0"
description = ""
authors = ["Britodfbr <britodfbr@gmail.com>"]
readme = "README.md"
packages = [{include = "incolume"}]

[tool.poetry.dependencies]
python = "^3.11.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
